added update  comments to html and css files

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+<!-- updated website name -->
     <title>Home | Horiseon</title>
 </head>
 
 <body>
+<!-- created semantic tag for header -->
     <header>
+    <!-- created semantic tag for updated id for logo -->
         <h1 id="logo">Hori<span id="seo">seo</span>n</h1>
+        <!-- created semantic tag for nav -->
         <nav>
             <ul>
                 <li>
+                    <!-- fixed broken links -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -25,25 +30,29 @@
         </nav>
     </header>
 
+    <!-- renamed main image -->
     <div class="top-image"></div>
 
+    <!-- created semantic tag for main content -->
     <main>
+        <!-- created semantic tags for main content sections -->
         <section id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" a="Laptop">
+            <!-- added alt tags to images -->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook Image">
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop image">
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Icons">
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,7 +60,9 @@
         </section>
     </main>
 
+    <!-- created semantic tag for side bar -->
     <aside>
+        <!-- created semantic tags for side bar secrions -->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -74,6 +85,8 @@
             </p>
         </section>
     </aside>
+
+    <!-- created semantic tag footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
